public interface FossilMaterials {
    public void production(Material material);
}
