import java.util.ArrayList;

public interface GroupCarriers {
    public void groupCarry(MovableObject movableObject, String newPlace);
}
