public interface Layer {
    public void lay(String bed);
}
