public interface Speaker {
    public void say(String phrase);
}
