@startuml
interface Carrier {
+ void carry(MovableObject,String)
}
class ZnaykaSpeaker {
+ void say(String)
}
interface Movable {
+ void move(String)
}
interface Existing {
+ String getLocation()
+ void setLocation(String)
}
abstract class Pilulkin {
}
class TheWonderfulStory {
+ {static} void main(String[])
}
class FucsiaCarrier {
+ void carry(MovableObject,String)
}
interface MovableObject {
}
class NeznaykaMover {
+ void move(String)
}
abstract class Seledochka {
}
class FossilerPerHour {
+ void production(Material)
}
class ZnaykaMover {
+ void move(String)
}
interface Layer {
+ void lay(String)
}
interface Called {
+ String getName()
+ void setName(String)
}
interface Dressable {
+ ArrayList<String> getClothes()
+ void setClothes(ArrayList<String>)
+ void showClothes()
+ void takeOffCloth(String)
}
interface Material {
+ int getMassPerMeter3()
}
interface GroupCarriers {
+ void groupCarry(MovableObject,String)
}
class ZnaykaCarrier {
+ void carry(MovableObject,String)
}
class NeznaykaLayer {
+ void lay(String)
}
interface Speaker {
+ void say(String)
}
enum lunit {
+  LUNIT
+  ANTILUNIT
- int kiloPerMeter3
+ int getMassPerMeter3()
}
class PilulkinCarrier {
+ void carry(MovableObject,String)
}
abstract class Fucsia {
}
abstract class Neznayka {
}
class Group {
~ ArrayList<Carrier> carriers
+ void groupCarry(MovableObject,String)
}
abstract class Human {
~ String name
~ String location
+ void setName(String)
+ String getName()
+ String getLocation()
+ void setLocation(String)
+ String toString()
+ boolean equals(Object)
+ int hashCode()
}
abstract class Znayka {
}
class PilulkinMover {
+ void move(String)
}
class SeledochkaCarrier {
+ void carry(MovableObject,String)
}
class NeznaykaDress {
~ ArrayList<String> clothes
+ ArrayList<String> getClothes()
+ void setClothes(ArrayList<String>)
+ void showClothes()
+ void takeOffCloth(String)
}
interface FossilMaterials {
+ void production(Material)
}


Called <|-- Carrier
Speaker <|.. ZnaykaSpeaker
Znayka <|-- ZnaykaSpeaker
Human <|-- Pilulkin
Carrier <|.. FucsiaCarrier
Fucsia <|-- FucsiaCarrier
Movable <|-- MovableObject
Called <|-- MovableObject
Existing <|-- MovableObject
MovableObject <|.. NeznaykaMover
Neznayka <|-- NeznaykaMover
Human <|-- Seledochka
FossilMaterials <|.. FossilerPerHour
MovableObject <|.. ZnaykaMover
Znayka <|-- ZnaykaMover
Carrier <|.. ZnaykaCarrier
Znayka <|-- ZnaykaCarrier
Layer <|.. NeznaykaLayer
Neznayka <|-- NeznaykaLayer
Carrier <|.. PilulkinCarrier
Pilulkin <|-- PilulkinCarrier
Human <|-- Fucsia
Human <|-- Neznayka
GroupCarriers <|.. Group
Called <|.. Human
Existing <|.. Human
Human <|-- Znayka
MovableObject <|.. PilulkinMover
Pilulkin <|-- PilulkinMover
Carrier <|.. SeledochkaCarrier
Seledochka <|-- SeledochkaCarrier
Dressable <|.. NeznaykaDress
Neznayka <|-- NeznaykaDress
@enduml